Fixed bug #40935 (pdo_mysql does not raise an exception on empty fetchAll()).